Fixed z-index on footer

--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ a.item {
   right: 0;
   bottom: 20px;
   display: none;
+  z-index: 35 !important;
 }
 
 .btn-group {
